# voronoi

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  beachline.cpp  beachline.h  data.txt  edge.h  event.h  geometry.h  gnuplot.result.txt  main.cpp  make_unique.h  point.h  voronoi.cpp  voronoi.h  voronoi.pro  voronoi.sln  voronoi.vcxproj  voronoi.vcxproj.filters
src/: beachline.cpp  beachline.h  edge.h  event.h  geometry.cpp  geometry.h  main.cpp  make_unique.h  point.h  src.pro  voronoi.cpp  voronoi.h
tests/: CMakeLists.txt  UnitTest++.vcxproj  UnitTest++.vcxproj.filters  VoronoiTest.sln  VoronoiTest.vcxproj  VoronoiTest.vcxproj.filters  main.cpp  test1.cpp  test1.h  tests.pro
tests/src/: beachlineTest.cpp  geometryTest.cpp  main.cpp  simpleDiagrams.cpp  tests.cpp  tests.h  voronoiTest.cpp
